minor edit to tagpage layout

--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -6,7 +6,7 @@ layout: body
   <section class="chapters cf">
     <div class="wrapper">
       <div class="postcard-body">
-        <h1 class="site-title">{{ page.name }}</h1>
+        <h1 class="site-title">{{ page.title }}</h1>
         <p class="postcard-body__excerpt__text">
 	  {{ page.content }}
         </p>
