--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -8,7 +8,7 @@ layout: body
       <div class="postcard-body">
         <h1 class="site-title">{{ page.title }}</h1>
         <p class="postcard-body__excerpt__text">
-	  {{ page.content }}
+	  {{ content }}
         </p>
       </div>
     </div>
